crates/oopsie-daisy/src/snapshots/oopsie_daisy__fancy_report__tests__fancy_report_chain.snap
---
source: crates/oopsie-daisy/src/fancy_report.rs
expression: report.to_string()
---
Error[oopsie_daisy::fancy_report::tests::TestError]: Outer error
  ╰─▶ Test error: root cause

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   0: backtrace::backtrace::libunwind::trace
             at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/libunwind.rs:117:9
      backtrace::backtrace::trace_unsynchronized::<<backtrace::capture::Backtrace>::create::{closure#0}>
             at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/mod.rs:66:14
   1: backtrace::backtrace::trace::<<backtrace::capture::Backtrace>::create::{closure#0}>
             at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/mod.rs:53:14
   2: <backtrace::capture::Backtrace>::create
             at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/capture.rs:294:9
   3: <backtrace::capture::Backtrace>::new
             at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/capture.rs:259:22
   4: <oopsie_core::backtrace::Backtrace as oopsie_core::traits::GenerateImplicitData>::generate
             at /Users/gaetan/dev/oopsie/.worktrees/test-mutation-coverage/crates/oopsie-core/src/backtrace.rs:11:19
   5: <alloc::boxed::Box<oopsie_core::backtrace::Backtrace> as oopsie_core::traits::GenerateImplicitData>::generate
             at /Users/gaetan/dev/oopsie/.worktrees/test-mutation-coverage/crates/oopsie-core/src/traits.rs:34:18
   6: <oopsie_daisy::fancy_report::tests::TestOopsie<&str>>::build
             at src/fancy_report.rs:407:5
   7: oopsie_daisy::fancy_report::tests::test_fancy_report_chain
             at src/fancy_report.rs:437:10
   8: oopsie_daisy::fancy_report::tests::test_fancy_report_chain::{closure#0}
             at src/fancy_report.rs:433:33
   9: <oopsie_daisy::fancy_report::tests::test_fancy_report_chain::{closure#0} as core::ops::function::FnOnce<()>>::call_once
             at /Users/gaetan/.rustup/toolchains/nightly-2026-02-04-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/ops/function.rs:250:5
  10: <fn() -> core::result::Result<(), alloc::string::String> as core::ops::function::FnOnce<()>>::call_once
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/core/src/ops/function.rs:250:5
      test::__rust_begin_short_backtrace::<core::result::Result<(), alloc::string::String>, fn() -> core::result::Result<(), alloc::string::String>>
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/test/src/lib.rs:663:18
  11: test::run_test_in_process::{closure#0}
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/test/src/lib.rs:686:74
      <core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure#0}> as core::ops::function::FnOnce<()>>::call_once
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/core/src/panic/unwind_safe.rs:274:9
      std::panicking::catch_unwind::do_call::<core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure#0}>, core::result::Result<(), alloc::string::String>>
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/std/src/panicking.rs:581:40
      std::panicking::catch_unwind::<core::result::Result<(), alloc::string::String>, core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure#0}>>
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/std/src/panicking.rs:544:19
      std::panic::catch_unwind::<core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure#0}>, core::result::Result<(), alloc::string::String>>
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/std/src/panic.rs:359:14
      test::run_test_in_process
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/test/src/lib.rs:686:27
      test::run_test::{closure#0}
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/test/src/lib.rs:607:43
  12: test::run_test::{closure#1}
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/test/src/lib.rs:637:41
      std::sys::backtrace::__rust_begin_short_backtrace::<test::run_test::{closure#1}, ()>
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/std/src/sys/backtrace.rs:166:18
  13: std::thread::lifecycle::spawn_unchecked::<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/std/src/thread/lifecycle.rs:91:13
      <core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}> as core::ops::function::FnOnce<()>>::call_once
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/core/src/panic/unwind_safe.rs:274:9
      std::panicking::catch_unwind::do_call::<core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>, ()>
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/std/src/panicking.rs:581:40
      std::panicking::catch_unwind::<(), core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>>
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/std/src/panicking.rs:544:19
      std::panic::catch_unwind::<core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>, ()>
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/std/src/panic.rs:359:14
      std::thread::lifecycle::spawn_unchecked::<test::run_test::{closure#1}, ()>::{closure#1}
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/std/src/thread/lifecycle.rs:89:26
      <std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1} as core::ops::function::FnOnce<()>>::call_once::{shim:vtable#0}
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/core/src/ops/function.rs:250:5
  14: <alloc::boxed::Box<dyn core::ops::function::FnOnce<(), Output = ()> + core::marker::Send> as core::ops::function::FnOnce<()>>::call_once
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/alloc/src/boxed.rs:2206:9
      <std::sys::thread::unix::Thread>::new::thread_start
             at /rustc/366a1b93e7f466ebe559477add05f064873d0c71/library/std/src/sys/thread/unix.rs:127:17
  15: __pthread_cond_wait
