crates/oopsie-daisy/src/snapshots/oopsie_daisy__fancy_report__tests__fancy_report_colored_stripped.snap
---
source: crates/oopsie-daisy/src/fancy_report.rs
expression: output
---
Error: Test error: colored test

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━



━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 1: backtrace[PTR]::backtrace::libunwind::trace
    at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/libunwind.rs:117
 2: backtrace[PTR]::backtrace::trace_unsynchronized::<<backtrace[PTR]::capture::Backtrace>::create::{closure#0}>
    at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/mod.rs:66
 3: backtrace[PTR]::backtrace::trace::<<backtrace[PTR]::capture::Backtrace>::create::{closure#0}>
    at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/mod.rs:53
 4: <backtrace[PTR]::capture::Backtrace>::create
    at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/capture.rs:294
 5: <backtrace[PTR]::capture::Backtrace>::new
    at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/capture.rs:259
 6: <oopsie_core[PTR]::backtrace::BackTrace as oopsie_core[PTR]::traits::GenerateImplicitData>::generate
    at /Users/gaetan/dev/oopsie/crates/oopsie-core/src/backtrace.rs:9
 7: <alloc[PTR]::boxed::Box<oopsie_core[PTR]::backtrace::BackTrace> as oopsie_core[PTR]::traits::GenerateImplicitData>::generate
    at /Users/gaetan/dev/oopsie/crates/oopsie-core/src/traits.rs:34
 8: <oopsie_daisy[PTR]::fancy_report::tests::TestOopsie<&str>>::build
    at [CRATE_DIR]/src/fancy_report.rs:384
 9: oopsie_daisy[PTR]::fancy_report::tests::test_fancy_report_colored
    at [CRATE_DIR]/src/fancy_report.rs:427
10: oopsie_daisy[PTR]::fancy_report::tests::test_fancy_report_colored::{closure#0}
    at [CRATE_DIR]/src/fancy_report.rs:423
11: <oopsie_daisy[PTR]::fancy_report::tests::test_fancy_report_colored::{closure#0} as core[PTR]::ops::function::FnOnce<()>>::call_once
    at /Users/gaetan/.rustup/toolchains/nightly-2026-02-04-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/ops/function.rs:250
12: <fn() -> core[PTR]::result::Result<(), alloc[PTR]::string::String> as core[PTR]::ops::function::FnOnce<()>>::call_once
    at /rustc/[COMMIT]/library/core/src/ops/function.rs:250
13: test[PTR]::__rust_begin_short_backtrace::<core[PTR]::result::Result<(), alloc[PTR]::string::String>, fn() -> core[PTR]::result::Result<(), alloc[PTR]::string::String>>
    at /rustc/[COMMIT]/library/test/src/lib.rs:663
14: test[PTR]::run_test_in_process::{closure#0}
    at /rustc/[COMMIT]/library/test/src/lib.rs:686
15: <core[PTR]::panic::unwind_safe::AssertUnwindSafe<test[PTR]::run_test_in_process::{closure#0}> as core[PTR]::ops::function::FnOnce<()>>::call_once
    at /rustc/[COMMIT]/library/core/src/panic/unwind_safe.rs:274
16: std[PTR]::panicking::catch_unwind::do_call::<core[PTR]::panic::unwind_safe::AssertUnwindSafe<test[PTR]::run_test_in_process::{closure#0}>, core[PTR]::result::Result<(), alloc[PTR]::string::String>>
    at /rustc/[COMMIT]/library/std/src/panicking.rs:581
17: std[PTR]::panicking::catch_unwind::<core[PTR]::result::Result<(), alloc[PTR]::string::String>, core[PTR]::panic::unwind_safe::AssertUnwindSafe<test[PTR]::run_test_in_process::{closure#0}>>
    at /rustc/[COMMIT]/library/std/src/panicking.rs:544
18: std[PTR]::panic::catch_unwind::<core[PTR]::panic::unwind_safe::AssertUnwindSafe<test[PTR]::run_test_in_process::{closure#0}>, core[PTR]::result::Result<(), alloc[PTR]::string::String>>
    at /rustc/[COMMIT]/library/std/src/panic.rs:359
19: test[PTR]::run_test_in_process
    at /rustc/[COMMIT]/library/test/src/lib.rs:686
20: test[PTR]::run_test::{closure#0}
    at /rustc/[COMMIT]/library/test/src/lib.rs:607
21: test[PTR]::run_test::{closure#1}
    at /rustc/[COMMIT]/library/test/src/lib.rs:637
22: std[PTR]::sys::backtrace::__rust_begin_short_backtrace::<test[PTR]::run_test::{closure#1}, ()>
    at /rustc/[COMMIT]/library/std/src/sys/backtrace.rs:166
23: std[PTR]::thread::lifecycle::spawn_unchecked::<test[PTR]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}
    at /rustc/[COMMIT]/library/std/src/thread/lifecycle.rs:91
24: <core[PTR]::panic::unwind_safe::AssertUnwindSafe<std[PTR]::thread::lifecycle::spawn_unchecked<test[PTR]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}> as core[PTR]::ops::function::FnOnce<()>>::call_once
    at /rustc/[COMMIT]/library/core/src/panic/unwind_safe.rs:274
25: std[PTR]::panicking::catch_unwind::do_call::<core[PTR]::panic::unwind_safe::AssertUnwindSafe<std[PTR]::thread::lifecycle::spawn_unchecked<test[PTR]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>, ()>
    at /rustc/[COMMIT]/library/std/src/panicking.rs:581
26: std[PTR]::panicking::catch_unwind::<(), core[PTR]::panic::unwind_safe::AssertUnwindSafe<std[PTR]::thread::lifecycle::spawn_unchecked<test[PTR]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>>
    at /rustc/[COMMIT]/library/std/src/panicking.rs:544
27: std[PTR]::panic::catch_unwind::<core[PTR]::panic::unwind_safe::AssertUnwindSafe<std[PTR]::thread::lifecycle::spawn_unchecked<test[PTR]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>, ()>
    at /rustc/[COMMIT]/library/std/src/panic.rs:359
28: std[PTR]::thread::lifecycle::spawn_unchecked::<test[PTR]::run_test::{closure#1}, ()>::{closure#1}
    at /rustc/[COMMIT]/library/std/src/thread/lifecycle.rs:89
29: <std[PTR]::thread::lifecycle::spawn_unchecked<test[PTR]::run_test::{closure#1}, ()>::{closure#1} as core[PTR]::ops::function::FnOnce<()>>::call_once::{shim:vtable#0}
    at /rustc/[COMMIT]/library/core/src/ops/function.rs:250
30: <alloc[PTR]::boxed::Box<dyn core[PTR]::ops::function::FnOnce<(), Output = ()> + core[PTR]::marker::Send> as core[PTR]::ops::function::FnOnce<()>>::call_once
    at /rustc/[COMMIT]/library/alloc/src/boxed.rs:2206
31: <std[PTR]::sys::thread::unix::Thread>::new::thread_start
    at /rustc/[COMMIT]/library/std/src/sys/thread/unix.rs:127
32: __pthread_cond_wait
    at <unknown source file>
