crates/oopsie-daisy/src/snapshots/oopsie_daisy__fancy_report__tests__fancy_report_with_spantrace.snap
---
source: crates/oopsie-daisy/src/fancy_report.rs
expression: report
---
Error[oopsie_daisy::erased::tests::ErrorWithSpanTraceInner]: Inner error happened
  ╰─▶ Error: Inner function failed (foo=true, name=Alice)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   0: sys::inner_function
           with {"foo":true,"id":42,"name":"Alice"}
             at crates/oopsie-daisy/src/erased.rs:421
   1: controller::outer_function
           with {"foo":true,"name":"Alice"}
             at crates/oopsie-daisy/src/erased.rs:429
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   0: backtrace::backtrace::libunwind::trace
             at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/libunwind.rs:[LOC]
      backtrace::backtrace::trace_unsynchronized::<<backtrace::capture::Backtrace>::create::{closure#0}>
             at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/mod.rs:[LOC]
   1: backtrace::backtrace::trace::<<backtrace::capture::Backtrace>::create::{closure#0}>
             at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/mod.rs:[LOC]
   2: <backtrace::capture::Backtrace>::create
             at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/capture.rs:[LOC]
   3: <backtrace::capture::Backtrace>::new
             at /Users/gaetan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/capture.rs:[LOC]
   4: <oopsie_core::backtrace::Backtrace as oopsie_core::traits::GenerateImplicitData>::generate
             at /Users/gaetan/dev/oopsie/crates/oopsie-core/src/backtrace.rs:[LOC]
   5: <alloc::boxed::Box<oopsie_core::backtrace::Backtrace> as oopsie_core::traits::GenerateImplicitData>::generate
             at /Users/gaetan/dev/oopsie/crates/oopsie-core/src/traits.rs:[LOC]
   6: <oopsie_daisy::erased::tests::ErrorWithSpanTraceInnerOopsie<alloc::string::String>>::build
             at src/erased.rs:[LOC]
   7: <oopsie_daisy::erased::tests::ErrorWithSpanTraceInnerOopsie<alloc::string::String>>::fail::<()>
             at src/erased.rs:[LOC]
   8: oopsie_daisy::erased::tests::make_error::inner_function
             at src/erased.rs:[LOC]
   9: oopsie_daisy::erased::tests::make_error::outer_function
             at src/erased.rs:[LOC]
  10: oopsie_daisy::erased::tests::make_error
             at src/erased.rs:[LOC]
  11: oopsie_daisy::fancy_report::tests::test_fancy_report_with_spantrace
             at src/fancy_report.rs:[LOC]
  12: oopsie_daisy::fancy_report::tests::test_fancy_report_with_spantrace::{closure#0}
             at src/fancy_report.rs:[LOC]
  13: <oopsie_daisy::fancy_report::tests::test_fancy_report_with_spantrace::{closure#0} as core::ops::function::FnOnce<()>>::call_once
             at /Users/gaetan/.rustup/toolchains/nightly-2026-02-04-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/ops/function.rs:[LOC]
  14: <fn() -> core::result::Result<(), alloc::string::String> as core::ops::function::FnOnce<()>>::call_once
             at /rustc/[COMMIT]/library/core/src/ops/function.rs:[LOC]
      test::__rust_begin_short_backtrace::<core::result::Result<(), alloc::string::String>, fn() -> core::result::Result<(), alloc::string::String>>
             at /rustc/[COMMIT]/library/test/src/lib.rs:[LOC]
  15: test::run_test_in_process::{closure#0}
             at /rustc/[COMMIT]/library/test/src/lib.rs:[LOC]
      <core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure#0}> as core::ops::function::FnOnce<()>>::call_once
             at /rustc/[COMMIT]/library/core/src/panic/unwind_safe.rs:[LOC]
      std::panicking::catch_unwind::do_call::<core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure#0}>, core::result::Result<(), alloc::string::String>>
             at /rustc/[COMMIT]/library/std/src/panicking.rs:[LOC]
      std::panicking::catch_unwind::<core::result::Result<(), alloc::string::String>, core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure#0}>>
             at /rustc/[COMMIT]/library/std/src/panicking.rs:[LOC]
      std::panic::catch_unwind::<core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure#0}>, core::result::Result<(), alloc::string::String>>
             at /rustc/[COMMIT]/library/std/src/panic.rs:[LOC]
      test::run_test_in_process
             at /rustc/[COMMIT]/library/test/src/lib.rs:[LOC]
      test::run_test::{closure#0}
             at /rustc/[COMMIT]/library/test/src/lib.rs:[LOC]
  16: test::run_test::{closure#1}
             at /rustc/[COMMIT]/library/test/src/lib.rs:[LOC]
      std::sys::backtrace::__rust_begin_short_backtrace::<test::run_test::{closure#1}, ()>
             at /rustc/[COMMIT]/library/std/src/sys/backtrace.rs:[LOC]
  17: std::thread::lifecycle::spawn_unchecked::<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}
             at /rustc/[COMMIT]/library/std/src/thread/lifecycle.rs:[LOC]
      <core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}> as core::ops::function::FnOnce<()>>::call_once
             at /rustc/[COMMIT]/library/core/src/panic/unwind_safe.rs:[LOC]
      std::panicking::catch_unwind::do_call::<core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>, ()>
             at /rustc/[COMMIT]/library/std/src/panicking.rs:[LOC]
      std::panicking::catch_unwind::<(), core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>>
             at /rustc/[COMMIT]/library/std/src/panicking.rs:[LOC]
      std::panic::catch_unwind::<core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>, ()>
             at /rustc/[COMMIT]/library/std/src/panic.rs:[LOC]
      std::thread::lifecycle::spawn_unchecked::<test::run_test::{closure#1}, ()>::{closure#1}
             at /rustc/[COMMIT]/library/std/src/thread/lifecycle.rs:[LOC]
      <std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1} as core::ops::function::FnOnce<()>>::call_once::{shim:vtable#0}
             at /rustc/[COMMIT]/library/core/src/ops/function.rs:[LOC]
  18: <alloc::boxed::Box<dyn core::ops::function::FnOnce<(), Output = ()> + core::marker::Send> as core::ops::function::FnOnce<()>>::call_once
             at /rustc/[COMMIT]/library/alloc/src/boxed.rs:[LOC]
      <std::sys::thread::unix::Thread>::new::thread_start
             at /rustc/[COMMIT]/library/std/src/sys/thread/unix.rs:[LOC]
  19: __pthread_cond_wait
