crates/oopsie-daisy/src/snapshots/oopsie_daisy__fancy_report__tests__fancy_report_with_spantrace_debug.snap
---
source: crates/oopsie-daisy/src/fancy_report.rs
expression: "format!(\"{error:#}\")"
---
Inner error happened
